Disable Redis and Kafka requirements for finance service

--- a/finance/src/test/resources/config/application.yml
+++ b/finance/src/test/resources/config/application.yml
@@ -110,6 +110,10 @@ jhipster:
 # ===================================================================
 
 # application:
+app:
+  features:
+    redis-enabled: false
+    kafka-enabled: true
 management:
   health:
     mail:
