reubicacion de scripts de inicializacion

--- a/package.json
+++ b/package.json
@@ -12,26 +12,16 @@
     "backend:doc:test": "./mvnw -ntp javadoc:javadoc --batch-mode",
     "backend:info": "./mvnw -ntp enforcer:display-info --batch-mode",
     "backend:nohttp:test": "./mvnw -ntp checkstyle:check --batch-mode",
-    "backend:start": "./mvnw -Dskip.installnodenpm -Dskip.npm",
-    "backend:unit:test": "./mvnw -ntp -Dskip.installnodenpm -Dskip.npm verify --batch-mode -Dlogging.level.ROOT=OFF -Dlogging.level.tech.jhipster=OFF -Dlogging.level.com.monsterdam.gateway=OFF -Dlogging.level.org.springframework=OFF -Dlogging.level.org.springframework.web=OFF -Dlogging.level.org.springframework.security=OFF",
-    "build": "npm run webapp:prod --",
-    "build-watch": "concurrently 'npm run webapp:build:dev -- --watch' npm:backend:start",
+    "backend:start": "./mvnw",
+    "backend:unit:test": "./mvnw -ntp verify --batch-mode -Dlogging.level.ROOT=OFF -Dlogging.level.tech.jhipster=OFF -Dlogging.level.com.monsterdam.multimedia=OFF -Dlogging.level.org.springframework=OFF -Dlogging.level.org.springframework.web=OFF -Dlogging.level.org.springframework.security=OFF",
     "ci:backend:test": "npm run backend:info && npm run backend:doc:test && npm run backend:nohttp:test && npm run backend:unit:test -- -P$npm_package_config_default_environment",
     "ci:e2e:package": "npm run java:$npm_package_config_packaging:$npm_package_config_default_environment -- -Pe2e -Denforcer.skip=true",
     "ci:e2e:prepare": "npm run ci:e2e:prepare:docker",
     "ci:e2e:prepare:docker": "npm run services:up --if-present && docker ps -a",
-    "ci:e2e:run": "concurrently -k -s first \"npm run ci:e2e:server:start\" \"npm run e2e:headless\"",
     "preci:e2e:server:start": "npm run services:db:await --if-present && npm run services:others:await --if-present",
-    "ci:e2e:server:start": "java -jar target/e2e.$npm_package_config_packaging --spring.profiles.active=e2e,$npm_package_config_default_environment -Dlogging.level.ROOT=OFF -Dlogging.level.tech.jhipster=OFF -Dlogging.level.com.monsterdam.gateway=OFF -Dlogging.level.org.springframework=OFF -Dlogging.level.org.springframework.web=OFF -Dlogging.level.org.springframework.security=OFF --logging.level.org.springframework.web=ERROR",
+    "ci:e2e:server:start": "java -jar target/e2e.$npm_package_config_packaging --spring.profiles.active=e2e,$npm_package_config_default_environment -Dlogging.level.ROOT=OFF -Dlogging.level.tech.jhipster=OFF -Dlogging.level.com.monsterdam.multimedia=OFF -Dlogging.level.org.springframework=OFF -Dlogging.level.org.springframework.web=OFF -Dlogging.level.org.springframework.security=OFF --logging.level.org.springframework.web=ERROR",
     "ci:e2e:teardown": "npm run ci:e2e:teardown:docker --if-present",
     "ci:e2e:teardown:docker": "docker compose -f src/main/docker/services.yml down -v && docker ps -a",
-    "ci:frontend:test": "npm run webapp:build:$npm_package_config_default_environment && npm run test-ci",
-    "ci:server:await": "echo \"Waiting for services to start\" && npm run ci:server:await:gateway && echo \"Services started\"",
-    "ci:server:await:gateway": "wait-on -t 180000 http-get://127.0.0.1:$npm_package_config_backend_port/management/health",
-    "clean-www": "rimraf target/classes/static/",
-    "cleanup": "rimraf target/",
-    "cypress": "cypress open --e2e",
-    "cypress:audits": "cypress open --e2e --config-file cypress-audits.config.js",
     "docker:consul:down": "docker compose -f src/main/docker/consul.yml down -v",
     "docker:consul:up": "docker compose -f src/main/docker/consul.yml up --wait",
     "docker:db:down": "docker compose -f src/main/docker/postgresql.yml down -v",
@@ -40,16 +30,10 @@
     "docker:elasticsearch:up": "docker compose -f src/main/docker/elasticsearch.yml up --wait",
     "docker:kafka:down": "docker compose -f src/main/docker/kafka.yml down -v",
     "docker:kafka:up": "docker compose -f src/main/docker/kafka.yml up --wait",
-    "e2e": "npm run e2e:cypress:headed --",
-    "e2e:cypress": "cypress run --e2e --browser chrome",
-    "e2e:cypress:audits": "cypress run --e2e --browser chrome --config-file cypress-audits.config.js",
-    "e2e:cypress:audits:headless": "npm run e2e:cypress -- --config-file cypress-audits.config.js",
-    "e2e:cypress:headed": "npm run e2e:cypress -- --headed",
-    "e2e:cypress:record": "npm run e2e:cypress -- --record",
-    "e2e:dev": "concurrently -k -s first \"./mvnw\" \"npm run e2e\"",
-    "e2e:devserver": "concurrently -k -s first \"npm run backend:start\" \"npm start\" \"wait-on -t 180000 http-get://127.0.0.1:9000 && npm run e2e:headless -- -c baseUrl=http://localhost:9000\"",
-    "pree2e:headless": "npm run ci:server:await",
-    "e2e:headless": "npm run e2e:cypress --",
+    "docker:redis:down": "docker compose -f src/main/docker/redis.yml down -v",
+    "docker:redis:up": "docker compose -f src/main/docker/redis.yml up --wait",
+    "docker:minio:down": "docker-compose -f src/main/docker/minio.yml down -v",
+    "docker:minio:up": "docker-compose -f src/main/docker/minio.yml up --wait",
     "java:docker": "./mvnw -ntp verify -DskipTests -Pprod jib:dockerBuild",
     "java:docker:arm64": "npm run java:docker -- -Djib-maven-plugin.architecture=arm64",
     "java:docker:dev": "npm run java:docker -- -Pdev,webapp",
@@ -60,29 +44,9 @@
     "java:war": "./mvnw -ntp verify -DskipTests --batch-mode -Pwar",
     "java:war:dev": "npm run java:war -- -Pdev,webapp",
     "java:war:prod": "npm run java:war -- -Pprod",
-    "jest": "jest --coverage --logHeapUsage --maxWorkers=2 --config jest.conf.js",
-    "jest:update": "npm run jest -- --updateSnapshot",
-    "lint": "eslint . --ext .js,.ts,.jsx,.tsx",
-    "lint:fix": "npm run lint -- --fix",
-    "prepare": "husky install",
-    "prettier:check": "prettier --check \"{,src/**/,webpack/,.blueprint/**/}*.{md,json,yml,html,cjs,mjs,js,ts,tsx,css,scss,java}\"",
-    "prettier:format": "prettier --write \"{,src/**/,webpack/,.blueprint/**/}*.{md,json,yml,html,cjs,mjs,js,ts,tsx,css,scss,java}\"",
-    "services:up": "docker compose -f src/main/docker/services.yml up --wait",
-    "start": "npm run webapp:dev --",
-    "start-tls": "npm run webapp:dev -- --env.tls",
-    "pretest": "npm run lint",
-    "test": "npm run jest --",
-    "test-ci": "npm run lint && npm run jest:update --",
-    "test:watch": "npm run jest -- --watch",
-    "watch": "concurrently 'npm run start' npm:backend:start",
-    "webapp:build": "npm run clean-www && npm run webapp:build:dev --",
-    "webapp:build:dev": "webpack --config webpack/webpack.dev.js --env stats=minimal",
-    "webapp:build:prod": "webpack --config webpack/webpack.prod.js --progress=profile",
-    "webapp:dev": "npm run webpack-dev-server -- --config webpack/webpack.dev.js --env stats=minimal",
-    "webapp:dev-verbose": "npm run webpack-dev-server -- --config webpack/webpack.dev.js --progress=profile --env stats=normal",
-    "webapp:prod": "npm run clean-www && npm run webapp:build:prod --",
-    "webapp:test": "npm run test --",
-    "webpack-dev-server": "webpack serve"
+    "prettier:check": "prettier --check \"{,src/**/,.blueprint/**/}*.{md,json,yml,html,java}\"",
+    "prettier:format": "prettier --write \"{,src/**/,.blueprint/**/}*.{md,json,yml,html,java}\"",
+    "services:up": "docker compose -f src/main/docker/services.yml up --wait"
   },
   "config": {
     "backend_port": 8080,
