--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -1,16 +1,16 @@
 # This configuration is intended for development purpose, it's **your** responsibility to harden it for production
-name: gateway
+name: monsterdam
 services:
   app:
-    image: gateway
+    image: monsterdam
     environment:
       - _JAVA_OPTIONS=-Xmx512m -Xms256m
       - SPRING_PROFILES_ACTIVE=prod,api-docs
       - MANAGEMENT_PROMETHEUS_METRICS_EXPORT_ENABLED=true
       - SPRING_CLOUD_CONSUL_HOST=consul
       - SPRING_CLOUD_CONSUL_PORT=8500
-      - SPRING_R2DBC_URL=r2dbc:postgresql://postgresql:5432/gateway
-      - SPRING_LIQUIBASE_URL=jdbc:postgresql://postgresql:5432/gateway
+      - SPRING_R2DBC_URL=r2dbc:postgresql://postgresql:5432/monsterdam
+      - SPRING_LIQUIBASE_URL=jdbc:postgresql://postgresql:5432/monsterdam
       - SPRING_ELASTICSEARCH_URIS=http://elasticsearch:9200
       - SPRING_CLOUD_STREAM_KAFKA_BINDER_BROKERS=kafka:9092
     ports:
