--- a/src/main/docker/kafka.yml
+++ b/src/main/docker/kafka.yml
@@ -1,5 +1,5 @@
 # This configuration is intended for development purpose, it's **your** responsibility to harden it for production
-name: gateway
+name: monsterdam
 services:
   kafka:
     image: confluentinc/cp-kafka:7.5.2
