--- a/src/main/docker/postgresql.yml
+++ b/src/main/docker/postgresql.yml
@@ -1,12 +1,12 @@
 # This configuration is intended for development purpose, it's **your** responsibility to harden it for production
-name: gateway
+name: monsterdam
 services:
   postgresql:
     image: postgres:16.1
     # volumes:
-    #   - ~/volumes/jhipster/gateway/postgresql/:/var/lib/postgresql/data/
+    #   - ~/volumes/jhipster/monsterdam/postgresql/:/var/lib/postgresql/data/
     environment:
-      - POSTGRES_USER=gateway
+      - POSTGRES_USER=monsterdam
       - POSTGRES_PASSWORD=
       - POSTGRES_HOST_AUTH_METHOD=trust
     healthcheck:
