--- a/multimedia/src/main/resources/config/application.yml
+++ b/multimedia/src/main/resources/config/application.yml
@@ -110,25 +110,6 @@ spring:
       config:
         watch:
           enabled: false
-    function:
-      definition: kafkaConsumer;kafkaProducer
-    stream:
-      kafka:
-        binder:
-          replicationFactor: 1
-          auto-create-topics: true
-          brokers: localhost:9092
-      bindings:
-        binding-out-0:
-          content-type: text/plain
-          group: multimedia
-        kafkaConsumer-in-0:
-          destination: sse-topic
-          content-type: text/plain
-          group: multimedia
-        kafkaProducer-out-0:
-          content-type: text/plain
-          group: multimedia
   profiles:
     # The commented value for `active` can be replaced with valid Spring profiles to load.
     # Otherwise, it will be filled in by maven when building the JAR file
@@ -154,7 +135,7 @@ spring:
       hibernate.type.preferred_instant_jdbc_type: TIMESTAMP
       hibernate.id.new_generator_mappings: true
       hibernate.connection.provider_disables_autocommit: true
-      hibernate.cache.use_second_level_cache: true
+      hibernate.cache.use_second_level_cache: false
       hibernate.cache.use_query_cache: false
       hibernate.generate_statistics: false
       # modify batch size as necessary
