Add scripts to start all services

--- a/package.json
+++ b/package.json
@@ -8,7 +8,15 @@
     "app:start": "./mvnw",
     "multimedia:start": "npm --prefix multimedia run app:start",
     "finance:start": "npm --prefix finance run app:start",
-    "adminbff:start": "npm --prefix adminbff run app:start",
+    "catalogs:start": "npm --prefix catalogs run app:start",
+    "interactions:start": "npm --prefix interactions run app:start",
+    "notifications:start": "npm --prefix notifications run app:start",
+    "profile:start": "npm --prefix profile run app:start",
+    "admin-bff:start": "npm --prefix admin-bff run app:start",
+    "user-bff:start": "npm --prefix user-bff run app:start",
+    "admin-gateway:start": "npm --prefix admin-gateway run app:start",
+    "app-gateway:start": "npm --prefix app-gateway run app:start",
+    "services:start": "npm run docker:consul:up && npm run docker:minio:up && concurrently \"npm run admin-gateway:start\" \"npm run app-gateway:start\" \"npm run admin-bff:start\" \"npm run user-bff:start\" \"npm run catalogs:start\" \"npm run finance:start\" \"npm run interactions:start\" \"npm run multimedia:start\" \"npm run notifications:start\" \"npm run profile:start\"",
     "app:up": "docker compose -f src/main/docker/app.yml up --wait",
     "adminbff:up": "docker compose -f src/main/docker/adminbff.yml up --wait",
     "backend:build-cache": "./mvnw dependency:go-offline -ntp",
